Add download table to database
